--- a/harjoitustyö/versio9/harrastukset.html
+++ b/harjoitustyö/versio9/harrastukset.html
@@ -2,32 +2,29 @@
 <html lang="fi">
     <head>
         <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css?family=Lakki+Reddy&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles/tyylit.css">
-        <link href="css/lightbox.css" rel="stylesheet"> 
         <title>
             Paula Salonen
         </title>
+        <link href="lightbox2-master/dist/css/lightbox.min.css" rel="stylesheet">
     </head>
     <body>
         <nav id="header_navigationbar">
             <div class="headernavi_boxi"><a href="index.html"><h1>Paula Salonen</h1></a></div>
-            <div class="active headernavi_boxi"><a href="harrastukset.html">Harrastukset</a></div>
-            <div class="headernavi_boxi"><a href="biologia.html">Biologia</a></div>
-            <div class="headernavi_boxi"><a href="tuotteistaminen.html">Tuotteistaminen</a></div>
-            <div class="headernavi_boxi"><a href="koodaaminen.html">Koodaaminen</a></div>
+            <div class="active headernavi_boxi x"><a href="harrastukset.html">Harrastukset</a></div>
+            <div class="headernavi_boxi x"><a href="biologia.html">Biologia</a></div>
+            <div class="headernavi_boxi x"><a href="tuotteistaminen.html">Tuotteistaminen</a></div>
+            <div class="headernavi_boxi x"><a href="koodaaminen.html">Koodaaminen</a></div>
         </nav>
         <header class="header_container">
-            <div class="headertext_container">
-                <div class=header_text>
-                    <h1>Uusia maisemia etsimässä</h1>
-                </div>
+            <div class="header_text">
+                <h1>Uusia maisemia etsimässä</h1>
             </div>
         </header>
+        </header>
         <main>
-            <header><h2>HARRASTUKSET</h2></header>
-            <div class="kuvaus">
+            <section class="kuvaus">
+                <header><h2>HARRASTUKSET</h2></header>
                 <p>Olen harrastanut käsitöitä lapsesta asti. Tykkään yleensä suunnitella kaavat ja mallit niin ompelutöihin, 
                         neulontaa kuin vaikka virkkaukseen. Käsitöissä kiehtoo menetelmien laaja kirjo ja 
                         tekemisen loputtoman tuntuiset mahdollisuudet. 
@@ -39,13 +36,7 @@
                         Blogisivusto on nyt kaatunut, mutta tarkoitus on virkistää se eloon taas piakkoin. Samalla saan mahdollisuuden 
                         kokeilla uusia koodaustaitojani ja tehdä blogista entistä hienompi.
                 </p>
-            </div>
-            <!-- <div>
-                <h3 id="sanapilvi"><span style="color:red;">IDEA </span> + <span style="color:green;">SUUNNITTELU</span> + 
-                    <span style="color:orange;">ITSE TEKEMINEN</span> + <span style="color:blue;">VISUAALISUUS</span> 
-                    + <span style="color:magenta;">NÄPRÄÄMINEN</span>
-                </h3>
-            </div> -->
+            </section>
             <div>
                 <div class="rivit" id="kuvagalleria">
                     <a href="images/NeuletakkiPöllö.jpg" data-lightbox="Käsityöt" data-title="neuletakin reunaa">
@@ -58,30 +49,32 @@
                     <img src="images/IMG_20160308_141130380.jpg" style="width: auto; height: 200px;" alt="yläosan kaavaa"/></a>
                     <a href="images/pyoralaukku-7.jpg" data-lightbox="Käsityöt" data-title="pyöräntarakkalaukku">
                     <img src="images/pyoralaukku-7.jpg" style="width: auto; height: 200px;" alt="pyöräntarakkalaukku"/></a>
-                    <a href="images/Peruskaava2Pidempi – kopio.jpg" data-lightbox="Käsityöt" data-title="peruskaavan tekoa mallinukella">
-                    <img src="images/Peruskaava2Pidempi – kopio.jpg" style="width: auto; height: 200px;" alt="peruskaavan tekoa mallinukella"/></a>
-                    <a href="images/Peruskaava2Pidempi3.jpg" data-lightbox="Käsityöt" data-title="peruskaavan tekoa paperille">
-                    <img src="images/Peruskaava2Pidempi3.jpg" style="width: auto; height: 200px;" alt="peruskaavan tekoa paperille"/></a>
-                    <a href="images/perhoshuppari2 (1 of 1).jpg" data-lightbox="Käsityöt" data-title="hupparin selusta">
-                    <img src="images/perhoshuppari2 (1 of 1).jpg" style="width: auto; height: 200px;" alt="hupparin selusta"/></a>
-                    <a href="images/Laukut 032.jpg" data-lightbox="Käsityöt" data-title="käsilaukku">
-                    <img src="images/Laukut 032.jpg" style="width: auto; height: 200px;" alt="käsilaukku"/></a>
-                    <a href="images/Lily-laukku2.JPG" data-lightbox="Käsityöt" data-title="olkalaukku">
-                    <img src="images/Lily-laukku2.JPG" style="width: auto; height: 200px;" alt="olkalaukku"/></a>
-                    <a href="images/välispindeli 024.jpg" data-lightbox="Käsityöt" data-title="nypläystyyny">
-                    <img src="images/välispindeli 024.jpg" style="width: auto; height: 200px;" alt="nypläystyyny"/></a>
+                    <a href="images/Peruskaavanukke.jpg" data-lightbox="Käsityöt" data-title="peruskaavan tekoa mallinukella">
+                    <img src="images/Peruskaavanukke.jpg" style="width: auto; height: 200px;" alt="peruskaavan tekoa mallinukella"/></a>
+                    <a href="images/Peruskaava.jpg" data-lightbox="Käsityöt" data-title="peruskaavan tekoa paperille">
+                    <img src="images/Peruskaava.jpg" style="width: auto; height: 200px;" alt="peruskaavan tekoa paperille"/></a>
+                    <a href="images/perhoshuppari.jpg" data-lightbox="Käsityöt" data-title="hupparin selusta">
+                    <img src="images/perhoshuppari.jpg" style="width: auto; height: 200px;" alt="hupparin selusta"/></a>
+                    <a href="images/laukku.jpg" data-lightbox="Käsityöt" data-title="käsilaukku">
+                    <img src="images/laukku.jpg" style="width: auto; height: 200px;" alt="käsilaukku"/></a>
+                    <a href="images/Lily-laukku.JPG" data-lightbox="Käsityöt" data-title="olkalaukku">
+                    <img src="images/Lily-laukku.JPG" style="width: auto; height: 200px;" alt="olkalaukku"/></a>
+                    <a href="images/välispindeli.jpg" data-lightbox="Käsityöt" data-title="nypläystyyny">
+                    <img src="images/välispindeli.jpg" style="width: auto; height: 200px;" alt="nypläystyyny"/></a>
                 </div>
             </div>
-            <div class="kuvaus">
+            <section class="kuvaus">
                 <h3>LUE LISÄÄ KÄSITÖISTÄNI <a target="blank" href="https://www.poppala.fi">www.poppala.fi</a> (sivusto huollon alla)</h3>  
-            </div> 
+            </section> 
         </main>
         <footer>
-            <p>Yhteystiedot: <span style="color:green">paula.salonen(at)iki.fi<span> puh. 045 3529200</p>
+            <p>Yhteystiedot: <span style="color:green">paula.salonen(at)iki.fi</span> puh. 045 3529200</p>
         </footer> 
         <script src="js/lightbox-plus-jquery.min.js">
+        </script>
+        <script>
             lightbox.option({
-            'alwaysShowNavOnTouchDevices': true;
+            'alwaysShowNavOnTouchDevices': true
             })
         </script>
     </body> 
