--- a/harjoitustyö/versio9/index.html
+++ b/harjoitustyö/versio9/index.html
@@ -2,9 +2,8 @@
 <html lang="fi">
     <head>
         <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css?family=Nunito|Patrick+Hand+SC" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> -->
         <link rel="stylesheet" type="text/css" href="styles/tyylit.css">
+        <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
         <title>
             Paula Salonen
         </title>
@@ -12,26 +11,23 @@
     <body>
         <nav id="header_navigationbar">
             <div class="headernavi_boxi"><a href="index.html"><h1>Paula Salonen</h1></a></div>
-            <div class="headernavi_boxi"><a href="harrastukset.html">Harrastukset</a></div>
-            <div class="headernavi_boxi"><a href="biologia.html">Biologia</a></div>
-            <div class="headernavi_boxi"><a href="tuotteistaminen.html">Tuotteistaminen</a></div>
-            <div class="headernavi_boxi"><a href="koodaaminen.html">Koodaaminen</a></div>
+            <div class="headernavi_boxi x"><a href="harrastukset.html">Harrastukset</a></div>
+            <div class="headernavi_boxi x"><a href="biologia.html">Biologia</a></div>
+            <div class="headernavi_boxi x"><a href="tuotteistaminen.html">Tuotteistaminen</a></div>
+            <div class="headernavi_boxi x"><a href="koodaaminen.html">Koodaaminen</a></div>
         </nav>
         <header class="header_container">
-            <div class="pieni">
-                <img id="myphoto" src="images/paula_salonen.jpg" alt="kuva Paula Salosesta">
-            </div>
-            <div class="header_text iso">
-                <h1>Uusia maisemia etsimässä</h1>
-            </div>
-
+                <div class="header_text">
+                    <h1>Uusia maisemia etsimässä</h1>
+                </div>
         </header>
         <main>
-            <header><h2>KUKA OLEN?</h2></header>
-            <div class="kuvaus">
-                <p>Olen 32-vuotias biologi, joka päätti alkaa koodaamaan ilman aiempaa kokemusta. Minua kiehtoo niin harrastuksissa kuin työssäkin visuaalinen suunnittelu ja itse tekeminen alusta alkaen.</p>
-            </div>    
-            <div class="rivit navigation_boxes">
+            <section class="kuvaus">
+                <header><h2>KUKA OLEN?</h2></header>
+                <p>Olen 32-vuotias biologi, joka päätti alkaa koodaamaan ilman aiempaa kokemusta. Minua kiehtoo niin harrastuksissa 
+                kuin työssäkin visuaalinen suunnittelu ja itse tekeminen alusta alkaen.</p>
+            </section>
+            <nav class="rivit navigation_boxes">
                 <div class="boxi">
                     <a href="harrastukset.html"><img src="images/käsityöt.jpg" alt="vaatteen kaavan tekoa"></a>
                 </div>
@@ -56,10 +52,10 @@
                 <div class="boxi_mobile">
                     <a href="koodaaminen.html"><img src="images/koodia_kapea.jpg" alt="stereotypia koodaus"></a>
                 </div>
-            </div>
+            </nav>
         </main>
         <footer>
-            <p>Yhteystiedot: <span style="color:green">paula.salonen(at)iki.fi<span> puh. 045 3529200</p>
+            <p>Yhteystiedot: <span style="color:green">paula.salonen(at)iki.fi</span> puh. 045 3529200</p>
         </footer>    
     </body>
 </html>
