--- a/harjoitustyö/versio9/tuotteistaminen.html
+++ b/harjoitustyö/versio9/tuotteistaminen.html
@@ -2,8 +2,6 @@
 <html lang="fi">
     <head>
         <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css?family=Nunito|Patrick+Hand+SC" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> -->
         <link rel="stylesheet" type="text/css" href="styles/tyylit.css">
         <title>
             Paula Salonen
@@ -12,31 +10,28 @@
     <body>
         <nav id="header_navigationbar">
             <div class="headernavi_boxi"><a href="index.html"><h1>Paula Salonen</h1></a></div>
-            <div class="headernavi_boxi"><a href="harrastukset.html">Harrastukset</a></div>
-            <div class="headernavi_boxi"><a href="biologia.html">Biologia</a></div>
-            <div class="active headernavi_boxi"><a href="tuotteistaminen.html">Tuotteistaminen</a></div>
-            <div class="headernavi_boxi"><a href="koodaaminen.html">Koodaaminen</a></div>
+            <div class="headernavi_boxi x"><a href="harrastukset.html">Harrastukset</a></div>
+            <div class="headernavi_boxi x"><a href="biologia.html">Biologia</a></div>
+            <div class="active headernavi_boxi x"><a href="tuotteistaminen.html">Tuotteistaminen</a></div>
+            <div class="headernavi_boxi x"><a href="koodaaminen.html">Koodaaminen</a></div>
         </nav>
         <header class="header_container">
-            <div class="headertext_container">
-                <div class=header_text>
-                    <h1>Uusia maisemia etsimässä</h1>
-                </div>
+            <div class="header_text">
+                <h1>Uusia maisemia etsimässä</h1>
             </div>
         </header>
         <main>
-            <header><h2>TUOTTEISTAMINEN</h2></header>
             <section class="kuvaus">
-                <h3>MAISEMAN TUOTTEISTAMINEN</h3>
-                    <p>Olen työssäni perehtynyt palvelujen tuotteistamiseen 
-                    <a target="blank" href="https://keski-suomi.maajakotitalousnaiset.fi/sisalto/maiseman-tuotteistaminen-1621">maiseman tuotteistamisen</a> kautta.
-                        Olen toteuttanut Maa- ja kotitalousnaisilla työskennellessäni maiseman tuotteistamiseen liittyviä työpajoja. 
-                    </p>
-                    <img src="images/business.jpg" style="width: auto; height: 300px;" alt="ideas"/></a>
+                <header><h2>TUOTTEISTAMINEN</h2></header>
+                <p>Olen työssäni perehtynyt palvelujen tuotteistamiseen 
+                <a target="blank" href="https://keski-suomi.maajakotitalousnaiset.fi/sisalto/maiseman-tuotteistaminen-1621">maiseman tuotteistamisen</a> kautta.
+                    Olen toteuttanut Maa- ja kotitalousnaisilla työskennellessäni maiseman tuotteistamiseen liittyviä työpajoja. 
+                </p>
+                <img src="images/business.jpg" style="width: auto; height: 300px;" alt="ideas"/>
             </section>  
         </main>
         <footer>
-            <p>Yhteystiedot: <span style="color:green">paula.salonen(at)iki.fi<span> puh. 045 3529200</p>
+            <p>Yhteystiedot: <span style="color:green">paula.salonen(at)iki.fi</span> puh. 045 3529200</p>
         </footer>   
     </body>
 </html>
