Lisätty web fontti

--- a/harjoitustyö/versio9/index.html
+++ b/harjoitustyö/versio9/index.html
@@ -2,8 +2,8 @@
 <html lang="fi">
     <head>
         <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="styles/tyylit.css">
-        <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
         <title>
             Paula Salonen
         </title>
