--- a/harjoitustyö/versio9/harrastukset.html
+++ b/harjoitustyö/versio9/harrastukset.html
@@ -25,8 +25,8 @@
         <main>
             <section class="kuvaus">
                 <header><h2>HARRASTUKSET</h2></header>
-                <p>Olen harrastanut käsitöitä lapsesta asti. Tykkään yleensä suunnitella kaavat ja mallit niin ompelutöihin, 
-                        neulontaa kuin vaikka virkkaukseen. Käsitöissä kiehtoo menetelmien laaja kirjo ja 
+                <p>Olen harrastanut käsitöitä lapsesta asti. Tykkään  suunnitella itse kaavat ja mallit käsitöihini, on kyse sitten ompelutöistä, 
+                        neulonnasta tai virkkauksesta. Käsitöissä kiehtoo menetelmien laaja kirjo ja 
                         tekemisen loputtoman tuntuiset mahdollisuudet. 
                         Innostun aika ajoin neulomaan, ompelemaan, virkkaamaan, nypläämään, tekemään miniatyyrejä tai vain 
                         askartelemaan lapsen kanssa. Pääasia, että saan säännöllisesti näprätä jotain kivaa ja kaunista. 
