--- a/harjoitustyö/versio9/koodaaminen.html
+++ b/harjoitustyö/versio9/koodaaminen.html
@@ -24,8 +24,7 @@
             <header><h2>KOODAAMINEN</h2></header>
             <div class="rivit kuvaus">
                 <div class="vasen">
-                <p>Kiinnostuin koodaamisesta vuoden 2018 loppupuolella ollessani äitiyslomalla toisesta 
-                    lapsestani. Halusin muuta ajateltavaa vauva-arjen ohella ja samalla kehittää osaamistani uuteen suuntaan. Olin haaveillut uudesta alasta,
+                <p>Kiinnostuin koodaamisesta vuoden 2018 loppupuolella ollessani äitiyslomalla toisen lapseni kanssa. Halusin muuta ajateltavaa vauva-arjen ohella ja samalla kehittää osaamistani uuteen suuntaan. Olin haaveillut uudesta alasta,
                     jossa saisin tehdä jonkilaista suunnittelutyötä jossa pääsee myös toteuttamaan lopputulosta. </p>
                 </div>
                 <div class="oikea">
